--- a/index.html
+++ b/index.html
@@ -8,27 +8,42 @@
 </head>
 
 <body>
-    <header>
-        <h1>Audio Player</h1>
-    </header>
+
     <main>
+
+
         <div class="audioPlayer">
-            <button id="prevSong" class="prevSongButton"></button>
-            <button id="playAudio" class="playSongButton"></button>
-            <button id="pauseAudio" class="pauseSongButton"></button>
-            <button id="nextSong" class="nextSongButton"></button>
-            <input id="songVolume" min="0" max="1" step="0.05" value="1" type="range">
-            <div class="progressBar">
-                <span id="songTime" class="progress"></span>
+            <div class="textBox">
+                audio player
             </div>
-            <select id="songPlaylist" class="select-style">
-                <option value="0">Camila Cabello - Havana</option>
-                <option value="1">AC/DC - Highway to Hell</option>
-                <option value="2">Post Malone - rockstar ft. 21 Savage</option>
-            </select>
-        </div>
+            <div class="playlist-style">
+                <select id="songPlaylist" class="select-style" size="3" multiple>
+                    <option value="0">1.Camila Cabello - Havana</option>
+                    <option value="1">2.AC/DC - Highway to Hell</option>
+                    <option value="2">3.Post Malone - rockstar </option>
+                </select>
+            </div>
+
+            <div class="middleBox">
+                <div class="progressBar">
+                    <span id="songTime" class="progress"></span>
+                </div>
+
+                <div class="buttons">
+                    <button id="prevSong" class="prevSongButton"></button>
+                    <button id="playAudio" class="playSongButton"></button>
+                    <button id="pauseAudio" class="pauseSongButton"></button>
+                    <button id="nextSong" class="nextSongButton"></button>
+                </div>
+            </div>
+            <div class="slider-wrapper">
+                <input id="songVolume" min="0" max="1" step="0.05" value="1" type="range">
+            </div>
+
 
         </div>
+
+
     </main>
 
 </body>
